--- a/package.json
+++ b/package.json
@@ -10,8 +10,46 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@egjs/hammerjs": "^2.0.17",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/drawer": "^6.6.0",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.12",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/use-sync-external-store": "^0.0.3",
+    "axios": "^1.3.6",
+    "escape-string-regexp": "^5.0.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "i18next": "^22.4.15",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.21",
+    "lottie-react-native": "^6.0.0-rc.3",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-i18next": "^12.2.2",
+    "react-is": "^18.2.0",
+    "react-native": "0.68.2",
+    "react-native-document-picker": "^8.2.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^5.0.2",
+    "react-native-permissions": "^3.6.1",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-modules": "^1.0.3",
+    "react-native-screens": "^3.19.0",
+    "react-native-sensitive-info": "^5.5.8",
+    "react-native-simple-dialogs": "^1.5.0",
+    "react-native-simple-toast": "^1.1.4",
+    "react-native-slideshow-improved": "^0.0.4",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^12.0.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
