--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@egjs/hammerjs": "^2.0.17",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.6.0",
@@ -33,7 +34,6 @@
     "react-native": "0.68.2",
     "react-native-document-picker": "^8.2.0",
     "react-native-gesture-handler": "^2.12.0",
-    "react-native-image-picker": "^5.0.2",
     "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-responsive-dimensions": "^3.1.1",
