--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
 import org.apache.tools.ant.taskdefs.condition.Os
-"../../node_modules/react-native-vector-icons/fonts.gradle"
+
+
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -83,6 +84,14 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+]
+
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle");
+
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -260,12 +269,16 @@ android {
 }
 
 dependencies {
+
+    
+    
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
@@ -287,6 +300,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    
 }
 
 if (isNewArchitectureEnabled()) {
