--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@callstack/react-theme-provider": "^3.0.8",
     "@egjs/hammerjs": "^2.0.17",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -21,12 +22,17 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/use-sync-external-store": "^0.0.3",
     "axios": "^1.3.6",
+    "color": "^4.2.3",
     "escape-string-regexp": "^5.0.0",
     "hoist-non-react-statics": "^3.3.2",
     "i18next": "^22.4.15",
     "invariant": "^2.2.4",
+    "jalaali-js": "^1.2.6",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.0.0-rc.3",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.10.0",
+    "moment-timezone": "^0.5.43",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-i18next": "^12.2.2",
@@ -35,6 +41,7 @@
     "react-native-document-picker": "^8.2.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-permissions": "^3.6.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.5.0",
@@ -49,7 +56,10 @@
     "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "use-sync-external-store": "^1.2.0"
+    "rimraf": "^5.0.1",
+    "use-latest-callback": "^0.1.6",
+    "use-sync-external-store": "^1.2.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
