--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,12 +85,14 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+//here down
 
 project.ext.vectoricons = [
     iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
 ]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+//here top
 
-apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle");
 
 
 /**
