--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@callstack/react-theme-provider": "^3.0.8",
     "@egjs/hammerjs": "^2.0.17",
     "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.6.0",
@@ -52,7 +53,7 @@
     "react-native-simple-toast": "^1.1.4",
     "react-native-slideshow-improved": "^0.0.4",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
