--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 
+apply plugin: 'com.google.gms.google-services'
+
 import com.android.build.OutputFile
 import org.apache.tools.ant.taskdefs.condition.Os
 
@@ -140,6 +142,10 @@ def reactNativeArchitectures() {
     return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
+
+
+
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
@@ -272,7 +278,7 @@ android {
 
 dependencies {
 
-    
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
     
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
