--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,12 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     ext {
-           
+        // new code
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+        supportLibVersion = "23.1.1"// default: 23.1.1
+
+
         buildToolsVersion = "31.0.0"
         minSdkVersion = 21
         compileSdkVersion = 33
@@ -24,7 +29,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-            
+        //new code
+        
+            classpath("com.google.gms:google-services:4.3.3") 
+            classpath("com.google.firebase:firebase-bom:32.2.0")
+            // classpath("com.google.firebase:firebase-analytics-ktx")
+
+
         classpath("com.android.tools.build:gradle:7.0.4")
         
         classpath("com.facebook.react:react-native-gradle-plugin")
